--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,7 +1,7 @@
 /* 
     Document   : layout
     Created on : 2013-sep-09, 10:23:02
-    Author     : Stefan
+    Author     : Robert
     Description:
         Purpose of the stylesheet follows.
 */
