Fixed Basepath for images

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -16,7 +16,7 @@
                     
                     <div id="do_compare">
                         <a href="#compare">
-                        <img src="img/ui/icons/magnifying_glass.svg">
+                        <img src="<?php echo $this->basePath('img/ui/icons/magnifying_glass.svg'); ?>">
                             <div class="item_count">
                                 <span>0</span>
                             </div>
@@ -30,36 +30,36 @@
                         <div class="header">
                             
                             <div class="icon">
-                                <img src="img/manufacturers/logos/expolinc-logo.svg" class="manufacturer icon">
-                                <img src="img/produkter/rollup_classic_large.png" class="product icon">
+                                <img src="<?php echo $this->basePath('img/manufacturers/logos/expolinc-logo.svg'); ?>" class="manufacturer icon">
+                                <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" class="product icon">
                             </div>
                             
                             <div class="actions">
                                 <ul>
                                     <li data-sidebar-interact='true' data-for='varukorg'>
-                                        <a href="#buy"> <img src="img/ui/icons/buy.svg"> Köp </a>
+                                        <a href="#buy"> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a>
                                         <ul class="has-children backshadow">
                                             <li>
                                                 <a href="#buy">
-                                                    <img src="img/ui/icons/buy.svg"> 85 x 215 cm
+                                                    <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> 85 x 215 cm
                                                     <div class="clear"></div>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#buy">
-                                                    <img src="img/ui/icons/buy.svg"> 100 x 215 cm
+                                                    <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> 100 x 215 cm
                                                     <div class="clear"></div>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#buy">
-                                                    <img src="img/ui/icons/buy.svg"> 145 x 215 cm
+                                                    <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> 145 x 215 cm
                                                     <div class="clear"></div>
                                                 </a>
                                             </li>
                                         </ul>
                                     </li>
-                                    <li> <a href="#add"> <img src="img/ui/icons/add_to_list.svg"> Lägg till i lista </a> </li>
+                                    <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-1" name="compare-1" class="compare">
                                         <label for="compare-1" class="compare">Jämför</label>
@@ -81,9 +81,9 @@
                         <div class="clear"></div>
 
                         <div class="image">
-                            <img src="img/ui/arrow_down_indicator.svg" alt="Arrow Down Indicator" class="indicator">
+                            <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
                             <div class="carousel">
-                                <img src="img/produkter/rollup_classic_large.png" alt="Roll-Up Classic" class="focus">
+                                <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="focus">
                             </div>
                         </div>
 
@@ -109,14 +109,14 @@
                         <div class="header">
                             
                             <div class="icon">
-                                <img src="img/manufacturers/logos/expolinc-logo.svg" class="manufacturer icon">
-                                <img src="img/produkter/rollup_professional_large.png" class="product icon">
+                                <img src="<?php echo $this->basePath('img/manufacturers/logos/expolinc-logo.svg'); ?>" class="manufacturer icon">
+                                <img src="<?php echo $this->basePath('img/produkter/rollup_professional_large.png'); ?>" class="product icon">
                             </div>
                             
                             <div class="actions">
                                 <ul>
-                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="img/ui/icons/buy.svg"> Köp </a> </li>
-                                    <li> <a href="#add"> <img src="img/ui/icons/add_to_list.svg"> Lägg till i lista </a> </li>
+                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a> </li>
+                                    <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-2" name="compare-2" class="compare">
                                         <label for="compare-2" class="compare">Jämför</label>
@@ -138,9 +138,9 @@
                         <div class="clear"></div>
 
                         <div class="image">
-                            <img src="img/ui/arrow_down_indicator.svg" alt="Arrow Down Indicator" class="indicator">
+                            <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
                             <div class="carousel">
-                                <img src="img/produkter/rollup_professional_large.png" alt="Roll-Up Professional" class="focus">
+                                <img src="<?php echo $this->basePath('img/produkter/rollup_professional_large.png'); ?>" alt="Roll-Up Professional" class="focus">
                             </div>
                         </div>
 
@@ -164,14 +164,14 @@
                         <div class="header">
                             
                             <div class="icon">
-                                <img src="img/manufacturers/logos/expolinc-logo.svg" class="manufacturer icon">
-                                <img src="img/produkter/rollup_compact_large.png" class="product icon">
+                                <img src="<?php echo $this->basePath('img/manufacturers/logos/expolinc-logo.svg'); ?>" class="manufacturer icon">
+                                <img src="<?php echo $this->basePath('img/produkter/rollup_compact_large.png'); ?>" class="product icon">
                             </div>
                             
                             <div class="actions">
                                 <ul>
-                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="img/ui/icons/buy.svg"> Köp </a> </li>
-                                    <li> <a href="#add"> <img src="img/ui/icons/add_to_list.svg"> Lägg till i lista </a> </li>
+                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a> </li>
+                                    <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-3" name="compare-3" class="compare">
                                         <label for="compare-3" class="compare">Jämför</label>
@@ -193,9 +193,9 @@
                         <div class="clear"></div>
 
                         <div class="image">
-                            <img src="img/ui/arrow_down_indicator.svg" alt="Arrow Down Indicator" class="indicator">
+                            <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
                             <div class="carousel">
-                                <img src="img/produkter/rollup_compact_large.png" alt="Roll-Up Compact" class="focus">
+                                <img src="<?php echo $this->basePath('img/produkter/rollup_compact_large.png'); ?>" alt="Roll-Up Compact" class="focus">
                             </div>
                         </div>
 
@@ -216,14 +216,14 @@
                         <div class="header">
                             
                             <div class="icon">
-                                <img src="img/manufacturers/logos/expolinc-logo.svg" class="manufacturer icon">
-                                <img src="img/produkter/case_and_counter_large.png" class="product icon">
+                                <img src="<?php echo $this->basePath('img/manufacturers/logos/expolinc-logo.svg'); ?>" class="manufacturer icon">
+                                <img src="<?php echo $this->basePath('img/produkter/case_and_counter_large.png'); ?>" class="product icon">
                             </div>
                             
                             <div class="actions">
                                 <ul>
-                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="img/ui/icons/buy.svg"> Köp </a> </li>
-                                    <li> <a href="#add"> <img src="img/ui/icons/add_to_list.svg"> Lägg till i lista </a> </li>
+                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a> </li>
+                                    <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-4" name="compare-4" class="compare">
                                         <label for="compare-4" class="compare">Jämför</label>
@@ -245,9 +245,9 @@
                         <div class="clear"></div>
 
                         <div class="image">
-                            <img src="img/ui/arrow_down_indicator.svg" alt="Arrow Down Indicator" class="indicator">
+                            <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
                             <div class="carousel">
-                                <img src="img/produkter/case_and_counter_large.png" alt="Case &amp; Counter" class="focus">
+                                <img src="<?php echo $this->basePath('img/produkter/case_and_counter_large.png'); ?>" alt="Case &amp; Counter" class="focus">
                             </div>
                         </div>
 
