--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -11,32 +11,27 @@
         
         <link rel="icon" type="image/png" href="img/ui/favicon.png" />
         
-        <link href="css/layout.css" media="screen" rel="stylesheet" type="text/css" />
-        <!--[if IE]>
-        <link href="css/ie.css" media="screen" rel="stylesheet" type="text/css" />
-        <![endif]-->
-
         <!-- Le styles -->
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/png', 'href' => $this->basePath() . '/img/ui/favicon.png'))
-                        ->prependStylesheet($this->basePath() . '/css/layout.css') ?>
+                        ->prependStylesheet( $this->basePath('/css/layout.css') ) ?>
 
         <!-- Scripts -->
         <?php echo $this->headScript()->appendFile( '//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js' )
                                       ->appendFile( '//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.js' )
-                                      ->appendFile($this->basePath() . 'js/jquery.transit.min.js') 
-                                      ->appendFile($this->basePath() . 'plugins/dotdotdot/jquery.dotdotdot.min.js') ?>
+                                      ->appendFile( $this->basePath( 'js/jquery.transit.min.js' ) ) 
+                                      ->appendFile( $this->basePath( 'plugins/dotdotdot/jquery.dotdotdot.min.js' ) ) ?>
         
     </head>
     <body class="preload">
         
         <div id="fb-root"></div>
-        <?php $this->inlineScript()->appendFile($this->basePath() . 'js/facebook.js') ?>
+        <?php $this->inlineScript()->appendFile($this->basePath( 'js/facebook.js' ) ) ?>
 
         <div id="sidebar">
             <!-- Close Button -->
             <div class="close">
                 <a>
-                    <img src="img/ui/icons/left_arrow.svg" alt="close sidebar">
+                    <img src="<?php echo $this->basePath('img/ui/icons/left_arrow.svg'); ?>" alt="close sidebar">
                 </a>
             </div>
 
@@ -78,7 +73,7 @@
                      <div class="elements">
                         <input type="text" id="sidebar-search" class="search" placeholder="Sök Produkt . . ." required ></input>
                         <a href="#clear" class="empty">
-                            <img src="img/ui/icons/close.png">
+                            <img src="<?php echo $this->basePath('img/ui/icons/close.png'); ?>">
                         </a>
                      </div>
             </div>
@@ -136,38 +131,38 @@
 
                 <div class="toggle active" data-for="products">
                     <a title="Produkter">
-                        <img src="img/ui/icons/menu.svg" alt="Produkter">
+                        <img src="<?php echo $this->basePath('img/ui/icons/menu.svg'); ?>" alt="Produkter">
                     </a>
                 </div>
 
                 <div class="toggle" data-for="information">
                     <a title="Information">
-                        <img src="img/ui/icons/information.svg" alt="Information">
+                        <img src="<?php echo $this->basePath('img/ui/icons/information.svg'); ?>" alt="Information">
                     </a>
                 </div>
 
                 <div class="toggle" data-for="varukorg">
                     <a title="Varukorg">
                         <div class="item_count">0</div>
-                        <img src="img/ui/icons/shopping_trolley.svg" alt="Varukorg">
+                        <img src="<?php echo $this->basePath('img/ui/icons/shopping_trolley.svg'); ?>" alt="Varukorg">
                     </a>
                 </div>
 
                 <div class="toggle" data-for="search">
                     <a title="Sök">
-                        <img src="img/ui/icons/magnifying_glass.svg" alt="Sök">
+                        <img src="<?php echo $this->basePath('img/ui/icons/magnifying_glass.svg'); ?>" alt="Sök">
                     </a>
                 </div>
 
                 <div class="toggle" data-for="user_account">
                     <a title="Användarkonto">
-                        <img src="img/ui/icons/user_account.svg" alt="Användarkonto">
+                        <img src="<?php echo $this->basePath('img/ui/icons/user_account.svg'); ?>" alt="Användarkonto">
                     </a>
                 </div>
 
                 <div class="toggle" data-for="social_media">
                     <a title="Sociala Medier">
-                        <img src="img/ui/icons/facebook.svg" alt="Sociala Medier">
+                        <img src="<?php echo $this->basePath('img/ui/icons/facebook.svg'); ?>" alt="Sociala Medier">
                     </a>
                 </div>
 
@@ -180,8 +175,8 @@
             <div id="header_wrapper">
                 <div id="header_top_wrapper">
                     <div id="header_top">
-                        <a href="/">
-                            <h1><img src="img/speedprint.se.svg" class="logo" alt="Speedprint.se"></h1>
+                        <a href="<?php echo $this->basePath(''); ?>">
+                            <h1><img src="<?php echo $this->basePath('img/speedprint.se.svg'); ?>" class="logo" alt="Speedprint.se"></h1>
                         </a>
                     </div>
                 </div>
@@ -192,7 +187,7 @@
                         <li class="search">
                             <input type="text" id="menu_search" class="search" placeholder="Sök Produkt . . ." data-sidebar="open" data-for="search" required>
                             <a href="#clear" class="empty">
-                                <img src="img/ui/icons/close.png">
+                                <img src="<?php echo $this->basePath('img/ui/icons/close.png'); ?>">
                             </a>
                         </li>
                     </ul>
@@ -222,7 +217,7 @@
         </div>
         
         <?php
-            $this->inlineScript()->appendFile($this->basePath() . 'js/documentReady.js');
+            $this->inlineScript()->appendFile($this->basePath( 'js/documentReady.js' ) );
             echo $this->inlineScript();
         ?>
         
