--- a/module/Application/view/error/404.phtml
+++ b/module/Application/view/error/404.phtml
@@ -1,4 +1,4 @@
-<h1><?php echo $this->translate('A 404 error occurred') ?></h1>
+<h1><?php echo $this->translate('Vi har letat överallt!') ?></h1>
 
 <div class="container fullsize">
     <div class="header">
@@ -7,10 +7,19 @@
     <div class="image">
         <img src="<?php echo $this->basePath('/img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
         <div class="carousel">
-            <img src="<?php echo $this->basePath('/img/ui/bkg/404.png'); ?>" alt="404" class="error focus fade-in">
+            <img src="<?php echo $this->basePath('/img/ui/icons/404.svg'); ?>" alt="404" class="error focus fade-in">
         </div>
     </div>
     <div class="content">
+        <p>
+            404 Sidan kan inte hittas! Vi har undersökt din förfrågan och sökt efter du leter efter, men vi kan tyvärr inte hitta det på vår sida.
+        </p>
+        <p>
+            Kontrollera så att du har skrivit in rätt adress i adressfältet eller hoppa tillbaka till <a href="<?php echo $this->basePath(''); ?>">förstasidan</a>.
+        </p>
+        <p>
+            Uppstår detta problem i framtiden kontakta oss på <a href="mailto:kontakt@speedprint.se">kontakt@speedprint.se</a>
+        </p>
 <?php if (isset($this->reason) && $this->reason): ?>
 
 <?php
