Fixed some more with the 404 page

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -176,7 +176,7 @@
                 <div id="header_top_wrapper">
                     <div id="header_top">
                         <a href="<?php echo $this->basePath(''); ?>">
-                            <h1><img src="<?php echo $this->basePath('img/speedprint.se.svg'); ?>" class="logo" alt="Speedprint.se"></h1>
+                            <img src="<?php echo $this->basePath('img/speedprint.se.svg'); ?>" class="logo" alt="Speedprint.se">
                         </a>
                     </div>
                 </div>
