--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -840,6 +840,7 @@ h2 {
 
 @media (min-width: 1920px) {
     /* 3 columns when screen is equal to or wider than 1920px */
+    /* This needs to be pushed                                */
     #body .list-type[data-format=boxes]:checked ~ .container {
         width: calc( ( 100% / 3 ) - 8px );
     }
