--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1600,6 +1600,7 @@ h2 {
 }
 
 #sidebar {
+    padding-top: 160px;
     box-shadow: 4px 0px 4px rgba(0,0,0,0.45);
     -moz-box-shadow: 4px 0px 4px rgba(0,0,0,0.45);
     -webkit-box-shadow: 4px 0px 4px rgba(0,0,0,0.45);
