--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -791,7 +791,7 @@ h2 {
 /***  Content Containers  ***/
 /****************************/
 
-#body .container {
+#body .container:not(#product) {
     
     display: block;
     position: relative;
@@ -1309,6 +1309,29 @@ h2 {
     background-image: -webkit-gradient( linear, top, bottom, color-stop(0.0, #ddd), color-stop(1.0, #ffffff) );
 }
 
+#body #product {
+    display: block;
+    position: relative;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    
+    overflow: hidden;
+    
+    border: 1px solid #999;
+    border-radius: 12px;
+    
+    width: 100%;
+    height: auto;
+    
+    margin: 12px auto;
+    padding: 12px;
+    
+    background-color: rgb(241, 241, 241);
+}
+
+#body #product .contents {
+    
+}
 /****************************/
 /***    Sidebar    **********/
 /****************************/
