Fixing the Product view pages

--- a/module/Products/view/products/product/product.phtml
+++ b/module/Products/view/products/product/product.phtml
@@ -1,6 +1,6 @@
 
 
-                    <h1>{Produkt}</h1>
+                    <h1>{Produkt} - Product Route</h1>
                     
                     <div id="product" class="container">
                         <div class="image">
