--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -1,6 +1,6 @@
 
 
-                    <h1>{Produkt}</h1>
+                    <h1>{Produkt} - SEO Route</h1>
                     
                     <div id="product" class="container">
                         <div class="image">
