Fixing the Product view pages and database connection

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -38,6 +38,7 @@
                                 <ul>
                                     <li data-sidebar-interact='true' data-for='varukorg'>
                                         <a href="#buy"> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a>
+                                        <div class="data hidden" data-id="1" data-name="Roll-Up Classic" data-icon="rollup_classic_large.png" data-manufacturer="Expolinc" data-price="2250" data-vat="25"></div>
                                         <ul class="has-children backshadow">
                                             <li>
                                                 <a href="#buy">
@@ -67,8 +68,10 @@
                                 </ul>
                             </div>
 
-                            <h3>Roll-Up Classic</h3>
-                            <h4>Expolinc</h4>
+                            <h3><a href="<?php echo $this->basePath('/produkter/roll_up_classic') . PHP_EOL; ?>" title="Roll-Up Classic">Roll-Up Classic</a></h3>
+                            <h4><a href="<?php echo $this->basePath('/tillverkare/expolinc') . PHP_EOL; ?>" title="Expolinc">Expolinc</a></h4>
+                            <span class="left block">&nbsp;/&nbsp;</span>
+                            <h4><a href="<?php echo $this->basePath('/kategori/roll_ups') . PHP_EOL; ?>" title="Roll-Ups">Roll-Ups</a></h4>
 
                             <div class="price">
                                 <p class="fran">från</p>
@@ -101,7 +104,6 @@
                             </p>
                         </div>
                         
-                        <div class="data hidden" data-id="1" data-name="Roll-Up Classic" data-icon="rollup_classic_large.png" data-manufacturer="Expolinc" data-price="2250" data-vat="25"></div>
                     </div>
 
                     <div class="splash container single backshadow">
@@ -115,7 +117,10 @@
                             
                             <div class="actions">
                                 <ul>
-                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a> </li>
+                                    <li>
+                                        <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a>
+                                        <div class="data hidden" data-id="2" data-name="Roll-Up Professional" data-icon="rollup_professional_large.png" data-manufacturer="Expolinc" data-price="2430" data-vat="25"></div>
+                                    </li>
                                     <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-2" name="compare-2" class="compare">
@@ -156,7 +161,6 @@
                             </p>
                         </div>
                         
-                        <div class="data hidden" data-id="2" data-name="Roll-Up Professional" data-icon="rollup_professional_large.png" data-manufacturer="Expolinc" data-price="2430" data-vat="25"></div>
                     </div>
 
                     <div class="splash container single backshadow">
@@ -170,7 +174,10 @@
                             
                             <div class="actions">
                                 <ul>
-                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a> </li>
+                                    <li>
+                                        <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a>
+                                        <div class="data hidden" data-id="3" data-name="Roll-Up Compact" data-icon="rollup_compact_large.png" data-manufacturer="Expolinc" data-price="1730" data-vat="25"></div>
+                                    </li>
                                     <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-3" name="compare-3" class="compare">
@@ -208,7 +215,6 @@
                             </p>
                         </div>
                         
-                        <div class="data hidden" data-id="3" data-name="Roll-Up Compact" data-icon="rollup_compact_large.png" data-manufacturer="Expolinc" data-price="1730" data-vat="25"></div>
                     </div>
 
                     <div class="splash container single backshadow">
@@ -222,7 +228,10 @@
                             
                             <div class="actions">
                                 <ul>
-                                    <li> <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a> </li>
+                                    <li>
+                                        <a href="#buy" data-sidebar-interact='true' data-for='varukorg'> <img src="<?php echo $this->basePath('img/ui/icons/buy.svg'); ?>"> Köp </a>
+                                        <div class="data hidden" data-id="4" data-name="Case &amp; Counter" data-icon="case_and_counter_large.png" data-manufacturer="Expolinc" data-price="4490" data-vat="25"></div>
+                                    </li>
                                     <li> <a href="#add"> <img src="<?php echo $this->basePath('img/ui/icons/add_to_list.svg'); ?>"> Lägg till i lista </a> </li>
                                     <li>
                                         <input type="checkbox" id="compare-4" name="compare-4" class="compare">
@@ -263,5 +272,4 @@
                             </p>
                         </div>
                         
-                        <div class="data hidden" data-id="4" data-name="Case &amp; Counter" data-icon="case_and_counter_large.png" data-manufacturer="Expolinc" data-price="4490" data-vat="25"></div>
                     </div>
