--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -810,8 +810,8 @@ h2 {
     padding: 12px;
     
     background-color: rgb(241, 241, 241);
-    /* @TODO remove this later */
-    /* cursor: pointer; */
+    
+    cursor: pointer;
     
 }
 
@@ -839,8 +839,8 @@ h2 {
 }
 
 @media (min-width: 1920px) {
-    /* 3 columns when screen is equal to or wider than 1920px  */
-    /* This needs to be pushed as in really needs to be pushed */
+    /* 3 columns when screen is equal to or wider than 1920px */
+    /* This needs to be pushed                                */
     #body .list-type[data-format=boxes]:checked ~ .container {
         width: calc( ( 100% / 3 ) - 8px );
     }
@@ -1110,54 +1110,17 @@ h2 {
     display: block;
 }
 
-#body .container .header ul.infomation,
-#body .container .header ul.infomation li{
-    list-style: none;
-    list-style-type: none;
-    
-    padding: 0;
-    margin: 0;
-}
-
-#body .container .header ul.infomation li {
-    float: left;
-}
-
-#body .container .header ul.infomation li:not(first-child) {
-    padding-left: 4px;
-}
-
-#body .container .header ul.infomation li a {
-    font-family: 'Fira Sans', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    
-    text-transform:capitalize;
-    line-height:20px;
-    font-size: 14px;
-    color: #666;
-    text-decoration: none;
-}
-
-#body .container .header ul.infomation li a:hover {
-    color: rgb(217,125,50);
-}
-
-#body .container h3, #body .container h4,
-#body .container h3 a, #body .container h4 a{
+#body .container h3, #body .container h4 {
     margin: 0;
     padding: 0;
     
     text-align: left;
-    text-decoration: none;
-    color: #000;
     font-family: 'Fira Sans', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
 }
 
-#body .container h3,
-#body .container h3 a{
+#body .container h3 {
     
     line-height: 26px;
     font-size: 20px;
@@ -1165,9 +1128,7 @@ h2 {
     color: #000;
 }
 
-#body .container h4,
-#body .container h4 a{
-    float: left;
+#body .container h4 {
     
     line-height:20px;
     font-size: 14px;
@@ -2353,12 +2314,4 @@ input.search:valid + a.empty.show:hover {
 .fb-like-box {
     display: block;
     width: calc(100% - 36px) !important;
-}
-
-.left {
-    float: left;
-}
-
-.block {
-    display: block;
 }
