CSS Some Porduct page work Got Doctrine to function locally @Home

--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -8,7 +8,7 @@
                         <div class="header">
                             
                             <div class="icon">
-                                <img src="<?php echo $this->basePath('img/manufacturers/logos/expolinc-logo.svg'); ?>" class="manufacturer icon">
+                                <img src="<?php echo $this->basePath('/img/manufacturers/logos/expolinc-logo.svg'); ?>" class="manufacturer icon">
                             </div>
                             
                             <div class="actions">
@@ -44,7 +44,7 @@
 
                             <h3><a href="<?php echo $this->basePath('/produkter/'.$value['product_seo']) . PHP_EOL; ?>" title="<?php echo( $value['product_name'] ); ?>"><?php echo( $value['product_name'] ); ?></a></h3>
                             
-                            <ul class='infomation'>
+                            <ul class='information'>
                                 <li>
                                     <a href="<?php echo $this->basePath('/tillverkare/expolinc') . PHP_EOL; ?>" title="Expolinc">Expolinc</a>
                                 </li>
